tests/ui/errors/snapshots/infer_defer_in_slice_literal.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid `defer`
   ╭─[test.lis:5:14]
 4 │ fn f() {
 5 │   let arr = [defer a(), defer b()];
   ·              ────┬────
   ·                  ╰── produces no value
 6 │ }
   ╰────
  help: Move `defer` to its own statement · code: [infer.defer_in_expression_position]
