tests/ui/errors/snapshots/infer_defer_in_while_loop.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `defer` inside loop
   ╭─[test.lis:6:5]
 5 │   while i < 10 {
 6 │     defer cleanup();
   ·     ───────┬───────
   ·            ╰── not allowed inside loop
 7 │     i = i + 1;
   ╰────
  help: Wrap the loop body in a helper function, e.g. `fn process(file: File) { defer file.close(); ... }` and call it in the loop: `for f in files { process(f); }` · code: [infer.defer_in_loop]
