tests/ui/errors/snapshots/infer_destructured_param_not_mutable.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Immutable variable
   ╭─[test.lis:3:3]
 2 │ fn test((x, y): (int, int)) -> int {
 3 │   x = 1
   ·   ──┬──
   ·     ╰── `x` was declared without `mut`
 4 │   x + y
   ╰────
  help: Parameters are immutable. Rebind with `let mut x = x` to mutate a local copy · code: [infer.immutable]
