tests/ui/errors/snapshots/infer_destructured_struct_param_not_mutable.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Immutable variable
   ╭─[test.lis:5:3]
 4 │ fn test(Point { x, y }: Point) -> int {
 5 │   x = 1
   ·   ──┬──
   ·     ╰── `x` was declared without `mut`
 6 │   x + y
   ╰────
  help: Parameters are immutable. Rebind with `let mut x = x` to mutate a local copy · code: [infer.immutable]
