tests/ui/errors/snapshots/infer_division_by_folded_zero.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Division by zero
   ╭─[test.lis:3:11]
 2 │ fn main() {
 3 │   let x = 10 / (2 - 2);
   ·           ──────┬─────
   ·                 ╰── cannot divide by zero
 4 │   x
   ╰────
  help: This operation will panic at runtime · code: [infer.division_by_zero]
