tests/ui/errors/snapshots/infer_division_int_float_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:3]
 2 │ fn half(n: int) -> float64 {
 3 │   n / 2.0
   ·   ───┬───
   ·      ╰── cannot divide `int` and `float64`
 4 │ }
   ╰────
  help: The `/` operator requires both operands to have the same numeric type · code: [infer.type_mismatch]
