tests/ui/errors/snapshots/infer_duplicate_binding_in_enum_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate binding
   ╭─[test.lis:5:14]
 4 │ fn main() {
 5 │   let Pair.A(x, x) = Pair.A(1, 2);
   ·              ┬  ┬
   ·              │  ╰── used again
   ·              ╰── first use of `x`
 6 │ }
   ╰────
  help: Remove the duplicate binding · code: [infer.duplicate_binding_in_pattern]
